--- a/argocd/apps/backrest/manifests/pvc.yaml
+++ b/argocd/apps/backrest/manifests/pvc.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   storageClassName: nfs-storage
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   resources:
     requests:
       storage: 1Gi
@@ -17,7 +17,7 @@ metadata:
 spec:
   storageClassName: nfs-storage
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   resources:
     requests:
       storage: 100Mi
@@ -29,7 +29,7 @@ metadata:
 spec:
   storageClassName: nfs-storage
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   resources:
     requests:
       storage: 1Gi
