--- a/argocd/apps/backrest/manifests/service.yaml
+++ b/argocd/apps/backrest/manifests/service.yaml
@@ -2,12 +2,12 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: owntracks
-  name: owntracks
+    app: backrest
+  name: backrest
 spec:
   ports:
     - name: "http"
-      port: 8083
-      targetPort: 80
+      port: 9898
+      targetPort: 9898
   selector:
-    app: owntracks
+    app: backrest
