--- a/argocd/apps/change-detection/manifests/deploy.yaml
+++ b/argocd/apps/change-detection/manifests/deploy.yaml
@@ -5,7 +5,7 @@ metadata:
     app: change-detection
   name: change-detection
 spec:
-  replicas: 0
+  replicas: 1
   selector:
     matchLabels:
       app: change-detection
@@ -61,6 +61,8 @@ metadata:
   name: playwright
 spec:
   replicas: 1
+  nodeSelector:
+    beta.kubernetes.io/arch: amd64
   selector:
     matchLabels:
       app: playwright
