--- a/argocd/apps/change-detection/manifests/deploy.yaml
+++ b/argocd/apps/change-detection/manifests/deploy.yaml
@@ -102,16 +102,14 @@ spec:
             - containerPort: 3000
               protocol: TCP
           readinessProbe:
-            httpGet:
-              path: /
+            tcpSocket:
               port: 3000
             initialDelaySeconds: 30
             periodSeconds: 10
             timeoutSeconds: 5
             failureThreshold: 3
           livenessProbe:
-            httpGet:
-              path: /
+            tcpSocket:
               port: 3000
             initialDelaySeconds: 60
             periodSeconds: 15
