--- a/argocd/apps/change-detection/manifests/ingress.yaml
+++ b/argocd/apps/change-detection/manifests/ingress.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    - host: change-detection.yanello.net
+    - host: change.yanello.net
       http:
         paths:
           - backend:
