--- a/argocd/apps/calibre/manifests/pvc.yaml
+++ b/argocd/apps/calibre/manifests/pvc.yaml
@@ -17,7 +17,7 @@ metadata:
 spec:
   storageClassName: nfs-storage
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   resources:
     requests:
       storage: 1Gi
