--- a/argocd/apps/calibre/manifests/deploy.yaml
+++ b/argocd/apps/calibre/manifests/deploy.yaml
@@ -96,22 +96,22 @@ spec:
               mountPath: /cwa-book-ingest
             - name: library
               mountPath: /calibre-library
-          readinessProbe:
-            httpGet:
-              path: /
-              port: 8083
-            initialDelaySeconds: 180
-            periodSeconds: 10
-            timeoutSeconds: 5
-            failureThreshold: 10
-          livenessProbe:
-            httpGet:
-              path: /
-              port: 8083
-            initialDelaySeconds: 60
-            periodSeconds: 15
-            timeoutSeconds: 5
-            failureThreshold: 3
+          # readinessProbe:
+          #   httpGet:
+          #     path: /
+          #     port: 8083
+          #   initialDelaySeconds: 180
+          #   periodSeconds: 10
+          #   timeoutSeconds: 5
+          #   failureThreshold: 10
+          # livenessProbe:
+          #   httpGet:
+          #     path: /
+          #     port: 8083
+          #   initialDelaySeconds: 60
+          #   periodSeconds: 15
+          #   timeoutSeconds: 5
+          #   failureThreshold: 3
       restartPolicy: Always
       volumes:
         - name: config
