--- a/argocd/apps/media-server/qbittorrent/deploy.yaml
+++ b/argocd/apps/media-server/qbittorrent/deploy.yaml
@@ -17,10 +17,9 @@ spec:
       labels:
         app: qbittorrent
         io.kompose.service: qbittorrent
-    selector:
-      matchLabels:
-        app: calibre-dl
     spec:
+      nodeSelector:
+        beta.kubernetes.io/arch: amd64
       containers:
       - name: qbittorrent
         env:
