--- a/argocd/apps/nextcloud/secrets/nextcloud-secret.enc.yaml
+++ b/argocd/apps/nextcloud/secrets/nextcloud-secret.enc.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
     name: nextcloud-secrets
-    namespace: frigate
+    namespace: nextcloud
 type: Opaque
 stringData:
     mariadb-root-password: ENC[AES256_GCM,data:bwX2tVim64zaMSujZXkUlb/9zKnUxEJZJTNW8iiF2vGrpse8pkaqEYcyCJRjt6xglNdJUHlZBUpX1sW63/CScg==,iv:uI2THx1QrXHwVwgFesqHeoZrV0qSB7QakdEa76JtGRw=,tag:Be6hNITE2q1dmNexY8tU3Q==,type:str]
@@ -23,8 +23,8 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-02-02T14:07:30Z"
-    mac: ENC[AES256_GCM,data:N4AAAKGTOr8GNxW+R01TZ4ZfeTme1f4tkGSiKUpD2Ic9FJJKbo4T7vMcoSGzvEI/F1BEkSd2PCOO2HlzpZrLzoMvy5VZKKZ46WaTvthV9JSdIqaBuAMG5H2lGVVaHm8l2e29sQT1WKYTGlEIGj/82IjYeXunGxkk4qgBbdwsMMs=,iv:PgAx1pWyL1ejSeqenmJ0rrSNMfM/p7P8tFW69/hfGLc=,tag:nG4Z1anHfWfqOnJY+mdP3g==,type:str]
+    lastmodified: "2025-02-02T14:14:48Z"
+    mac: ENC[AES256_GCM,data:84SWLMPw75lfcNnouNH0oYxPOLF/gg2m+EIYh1JheFALrYVMDt5q4Mlr8f4zx8/5d4RUTF4J5oC2v7tfJxSuPhm0BxwtBZRv/yQ64ZLY0GI+9p8J2P/N3vFsOh+qGMWKUzjS+K6+4DMp7tgtMadFeRMhJ3yOZjF70z8btM53u6A=,iv:+RDycje3JaZegPwdsMWkeKjksDbx8QSvivdAqfihvSk=,tag:Qhc8ITI10cc9XOSenNUSIg==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.9.1
