--- a/argocd/apps/nextcloud/app.yaml
+++ b/argocd/apps/nextcloud/app.yaml
@@ -45,6 +45,8 @@ spec:
           service:
             type: LoadBalancer
             loadBalancerIP: 10.10.8.3
+          internalDatabase:
+            enabled: false
           mariadb:
             enabled: true
             global:
