--- a/argocd/apps/nextcloud/secrets/nextcloud-secret.enc.yaml
+++ b/argocd/apps/nextcloud/secrets/nextcloud-secret.enc.yaml
@@ -8,6 +8,8 @@ stringData:
     mariadb-root-password: ENC[AES256_GCM,data:bwX2tVim64zaMSujZXkUlb/9zKnUxEJZJTNW8iiF2vGrpse8pkaqEYcyCJRjt6xglNdJUHlZBUpX1sW63/CScg==,iv:uI2THx1QrXHwVwgFesqHeoZrV0qSB7QakdEa76JtGRw=,tag:Be6hNITE2q1dmNexY8tU3Q==,type:str]
     mariadb-replication-password: ENC[AES256_GCM,data:RPvjxazFUjaNGfsaOlsBbq2t/z4V61okAqj+PJsYBIZqhEouHKzXfcWtUoxJqAZeFslCliZBPgwq80TCF9LGvA==,iv:96B+HsIzo4k64oNieP34XoH+6WJ5P5ZV2A+vL4WAXMU=,tag:u6lefd6EV0QL7JdBgnxvZQ==,type:str]
     mariadb-password: ENC[AES256_GCM,data:45uJaNg=,iv:cahVK0JoYOU6YMT7WBUD95WlMKmKp0yKlJadLfthMus=,tag:zOAGTUPRVn8W1Les7B2QIQ==,type:str]
+    db-password: ENC[AES256_GCM,data:rrx14AI=,iv:0sWnsAFEQs+tgR7EV+vzovoaPX4ypYO3i+1ZZVicH3k=,tag:B19uPWB6rEDE/sdqTq+H7Q==,type:str]
+    db-username: ENC[AES256_GCM,data:xcWJx75vCGwx,iv:w1ZfVb/24y1hJErM6n1VZEwYXa/n8u/uMChMQPTEbWQ=,tag:kXk1a/b41qeSsyV33lTL7w==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -23,8 +25,8 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-02-02T14:14:48Z"
-    mac: ENC[AES256_GCM,data:84SWLMPw75lfcNnouNH0oYxPOLF/gg2m+EIYh1JheFALrYVMDt5q4Mlr8f4zx8/5d4RUTF4J5oC2v7tfJxSuPhm0BxwtBZRv/yQ64ZLY0GI+9p8J2P/N3vFsOh+qGMWKUzjS+K6+4DMp7tgtMadFeRMhJ3yOZjF70z8btM53u6A=,iv:+RDycje3JaZegPwdsMWkeKjksDbx8QSvivdAqfihvSk=,tag:Qhc8ITI10cc9XOSenNUSIg==,type:str]
+    lastmodified: "2025-02-02T14:35:32Z"
+    mac: ENC[AES256_GCM,data:JCkJu+4Xk0TJOBVS/mXNzmJ2aRKF/86IbyuEzp92fPpTohbaUIY5X2wiFkI1KYRcylwO3DJJxMS1lvtEy5h/1+hKicsKwueFMX9KXIoxVzauwn0i7DukZgDWHvRuDWXZ48XUAsrN37+JIuVpHjFbPcMxyUtrLCqYCWqmrekb6yg=,iv:O5QvtjcMcNgQksT37HsRZ5b4V26jrW54lSQB6VOiYkA=,tag:S7EotUHFWQ8NKXXs3qZLkg==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.9.1
