--- a/argocd/apps/monitoring/grafana/app.yaml
+++ b/argocd/apps/monitoring/grafana/app.yaml
@@ -41,7 +41,7 @@ spec:
             GF_SECURITY_ALLOW_EMBEDDING: true
           admin:
             existingSecret: grafana-secrets
-            userKey: GRAFANA_USER
+            userKey: GRAFANA_USERNAME
             passwordKey: GRAFANA_PASSWORD
 
       
