grafana secret fix4

--- a/argocd/apps/monitoring/grafana/manifests/grafana-secrets.enc.yaml
+++ b/argocd/apps/monitoring/grafana/manifests/grafana-secrets.enc.yaml
@@ -5,7 +5,7 @@ metadata:
     namespace: grafana
 type: Opaque
 stringData:
-    GRAFANA_PASSWORD: ENC[AES256_GCM,data:cbulPAah,iv:bC3/LUtEogVAIXp9jX+g7ML962wg/7J++kqJWu2q26Q=,tag:9jVufYwIsvo9ag0tcJPuMw==,type:str]
+    GRAFANA_PASSWORD: ENC[AES256_GCM,data:Ij/Ci1E=,iv:Acs2z1JCHcrjhJn3HMHcI7MiU/AMZwBSOvvQ+Y8uVRo=,tag:1GD0p/HyQZX6CVCvlOAY3g==,type:str]
     GRAFANA_USERNAME: ENC[AES256_GCM,data:KWPJNHlF2Z71PvdL,iv:n3nzX1ZwFU052d63dXFkX//WnWmdZf/UtSqrgrn4E/g=,tag:7S/qeBqfkfoNAUwRUlqiaQ==,type:str]
 sops:
     kms: []
@@ -22,8 +22,8 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-02-02T21:49:29Z"
-    mac: ENC[AES256_GCM,data:GUEL4rdDhqCsxbh1eDvvQ3fm5+NN/C1pTMcu3q7CufZ0NQ8dtUC+312kiat/JlK6Hkye5n2PiI/hjZlYCMMjHGqmnWq0ahwl+F9OSkO2e85DRhaI4zAVy+s/uxdSxv6ubYXXLNwb3xPPS/Sf6dzhO3iLzHcKvU31XXPiX154GMI=,iv:lapGQ27eQh36San+Kjvwh1/64JUt368hrasJS6Qa6As=,tag:KyXqMf0JfsEVX3CTVTmjHA==,type:str]
+    lastmodified: "2025-02-02T22:06:01Z"
+    mac: ENC[AES256_GCM,data:UJWWrlXEkd26h7PouZYNTK4IDxP6jdI+YOFavHTGqacTsheFQcWHI+2rdwhmeKFvIylWIVA3t8QMhY45uk8NcfsbR0nRa9rtLutGmR1CQgJS/x0pKsMsj0HxvvNZLC+bkbdRLxLcPfE4k18Idw6SakGMO3+1161ivyKNbXSSqqw=,iv:rBLp6rg3aes+daYnYHqP5/uOZqzkp11eTia2WJorcDE=,tag:v6A1dwZV6zhWkmC+hX4zlA==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.9.1
