--- a/argocd/apps/monitoring/grafana/manifests/grafana-secrets.enc.yaml
+++ b/argocd/apps/monitoring/grafana/manifests/grafana-secrets.enc.yaml
@@ -5,8 +5,8 @@ metadata:
     namespace: grafana
 type: Opaque
 stringData:
-    GRAFANA_PASSWORD: ENC[AES256_GCM,data:Ij/Ci1E=,iv:Acs2z1JCHcrjhJn3HMHcI7MiU/AMZwBSOvvQ+Y8uVRo=,tag:1GD0p/HyQZX6CVCvlOAY3g==,type:str]
-    GRAFANA_USERNAME: ENC[AES256_GCM,data:KWPJNHlF2Z71PvdL,iv:n3nzX1ZwFU052d63dXFkX//WnWmdZf/UtSqrgrn4E/g=,tag:7S/qeBqfkfoNAUwRUlqiaQ==,type:str]
+    GRAFANA_USERNAME: ENC[AES256_GCM,data:boYOses=,iv:k6VJ2FpsWafYqEmsFCTVsayH+OjG0QoI/b0T/zhLc94=,tag:eldTNB3HIQq00oupyzyRiw==,type:str]
+    GRAFANA_PASSWORD: ENC[AES256_GCM,data:1LDly+KJH2w1PDUa,iv:KWGnKGU4IMQf5B5GMLdEj7F+JnKscvfd600bmy30Wdw=,tag:JFKqGEyw3XN01Y1XSAtC0Q==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -22,8 +22,8 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-02-02T22:06:01Z"
-    mac: ENC[AES256_GCM,data:UJWWrlXEkd26h7PouZYNTK4IDxP6jdI+YOFavHTGqacTsheFQcWHI+2rdwhmeKFvIylWIVA3t8QMhY45uk8NcfsbR0nRa9rtLutGmR1CQgJS/x0pKsMsj0HxvvNZLC+bkbdRLxLcPfE4k18Idw6SakGMO3+1161ivyKNbXSSqqw=,iv:rBLp6rg3aes+daYnYHqP5/uOZqzkp11eTia2WJorcDE=,tag:v6A1dwZV6zhWkmC+hX4zlA==,type:str]
+    lastmodified: "2025-02-02T22:12:02Z"
+    mac: ENC[AES256_GCM,data:H2JNDAoKXBw9wdeR40E2f26819pENvRqBVEY06RcTC5+sErX4zZNcLIgdteDgsHrV4LZYvxS0Ls7DMiP+x/gBV8ytG3dZ0VRrFZN7M2cTdzfHOAfwJetyZJOMPIfOroV3b4qRUdoiYnXLlUUn1M3+PgAdBAws+5QDoLY/TI+mR4=,iv:3IHjRh2FssigMCposNdaWZVUDfTqOIafv/PLqvJg8Kc=,tag:tK3lm21Lap33RfGrt0EBTg==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.9.1
