--- a/argocd/apps/monitoring/grafana/app.yaml
+++ b/argocd/apps/monitoring/grafana/app.yaml
@@ -31,7 +31,7 @@ spec:
           ingress:
             enabled: true
             hosts:
-              - grafana.k8s.yanello.net
+              - grafana.yanello.net
             ingressClassName: nginx
           persistence:
             enabled: true
