--- a/argocd/apps/monitoring/grafana/app.yaml
+++ b/argocd/apps/monitoring/grafana/app.yaml
@@ -11,6 +11,7 @@ spec:
       prune: true
     syncOptions:
       - CreateNamespace=true
+      - selfHeal=true
   destination:
     name: in-cluster
     namespace: grafana
