--- a/argocd/apps/monitoring/victoriametrics/app.yaml
+++ b/argocd/apps/monitoring/victoriametrics/app.yaml
@@ -17,7 +17,7 @@ spec:
   project: default
   source:
     repoURL: https://victoriametrics.github.io/helm-charts/
-    targetRevision: "0.17.3"
+    targetRevision: "*"
     chart: victoria-metrics-cluster
     helm:
       valuesObject:
