--- a/argocd/apps/monitoring/app.yaml
+++ b/argocd/apps/monitoring/app.yaml
@@ -29,4 +29,4 @@ spec:
             enabled: true
             ingressClassName: nginx
             hosts:
-              - name: vm.k8s.yanello.net
+              - vm.k8s.yanello.net
