--- a/argocd/apps/kuma/manifests/deploy.yaml
+++ b/argocd/apps/kuma/manifests/deploy.yaml
@@ -20,6 +20,13 @@ spec:
         - image: louislam/uptime-kuma:latest
           imagePullPolicy: Always
           name: kuma
+          resources:
+            limits:
+              cpu: 50m
+              memory: 250Mi
+            requests:
+              cpu: 25m
+              memory: 150Mi
           ports:
             - containerPort: 3001
               protocol: TCP
