--- a/argocd/apps/media-server/ombi/deploy.yaml
+++ b/argocd/apps/media-server/ombi/deploy.yaml
@@ -28,6 +28,13 @@ spec:
           image: linuxserver/ombi:latest
           imagePullPolicy: Always
           name: ombi
+          resources:
+            limits:
+              cpu: 100m
+              memory: 750Mi
+            requests:
+              cpu: 20m
+              memory: 400Mi
           ports:
             - containerPort: 3579
               protocol: TCP
