--- a/argocd/apps/calibre/manifests/deploy.yaml
+++ b/argocd/apps/calibre/manifests/deploy.yaml
@@ -160,6 +160,8 @@ spec:
       labels:
         app: cloudflareproxy
     spec:
+      nodeSelector:
+        beta.kubernetes.io/arch: amd64
       containers:
         - image: ghcr.io/sarperavci/cloudflarebypassforscraping:latest
           imagePullPolicy: Always
