--- a/argocd/apps/media-server/unpackerr/deploy.yaml
+++ b/argocd/apps/media-server/unpackerr/deploy.yaml
@@ -44,6 +44,13 @@ spec:
                 name: unpackerr-secrets
           image: golift/unpackerr:latest
           imagePullPolicy: Always
+          resources:
+            limits:
+              cpu: 100m
+              memory: 100Mi
+            requests:
+              cpu: 50m
+              memory: 50Mi
           name: unpackerr
           volumeMounts:
             - mountPath: /config
