--- a/argocd/apps/vaultwarden/app.yaml
+++ b/argocd/apps/vaultwarden/app.yaml
@@ -55,4 +55,10 @@ spec:
             adminToken:
               existingSecret: vw-admin-secret
               existingSecretKey: adminToken
-      
+            resources:
+              limits:
+                cpu: 100m
+                memory: 200Mi
+              requests:
+                cpu: 20m
+                memory: 100Mi
