--- a/argocd/apps/wallos/manifests/deploy.yaml
+++ b/argocd/apps/wallos/manifests/deploy.yaml
@@ -45,6 +45,13 @@ spec:
             periodSeconds: 15
             timeoutSeconds: 5
             failureThreshold: 3
+          resources:
+            limits:
+              cpu: 50m
+              memory: 100Mi
+            requests:
+              cpu: 10m
+              memory: 50Mi
       restartPolicy: Always
       volumes:
         - name: data
