nvidia op version

--- a/argocd/apps/nvidia-operator/app.yaml
+++ b/argocd/apps/nvidia-operator/app.yaml
@@ -18,7 +18,7 @@ spec:
   project: default
   source:
     repoURL: https://helm.ngc.nvidia.com/nvidia
-    targetRevision: "*"
+    targetRevision: "24.9.2"
     chart: gpu-operator
     helm:
       valuesObject:
