--- a/argocd/apps/nvidia-operator/app.yaml
+++ b/argocd/apps/nvidia-operator/app.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: nvidia-device-plugin
+  name: nvidia-operator
   namespace: argocd
   finalizers:
     - resources-finalizer.argocd.argoproj.io
