--- a/argocd/apps/frigate/manifests/kustomization.yaml
+++ b/argocd/apps/frigate/manifests/kustomization.yaml
@@ -1,8 +1,12 @@
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+
 generators:
-  - ./secret-generator.yaml
+- ./secret-generator.yaml
 
 resources:
-    - health-check.yaml
+- health-check.yaml
       
-patchesStrategicMerge:
-  - ./health-check-patch.yaml
+
+patches:
+- path: ./health-check-patch.yaml
