--- a/argocd/apps/frigate/manifests/kustomization.yaml
+++ b/argocd/apps/frigate/manifests/kustomization.yaml
@@ -10,3 +10,11 @@ resources:
 
 patches:
 - path: ./health-check-patch.yaml
+
+helmCharts:
+    - name: frigate
+      repo: https://blakeblackshear.github.io/blakeshome-charts/
+      version: "*"
+      releaseName: frigate
+      namespace: frigate
+      valuesFile: ../config.yaml
