--- a/argocd/apps/frigate/app.yaml
+++ b/argocd/apps/frigate/app.yaml
@@ -16,38 +16,38 @@ spec:
     namespace: frigate
   project: default
   sources:
-    - repoURL: https://blakeblackshear.github.io/blakeshome-charts/
-      targetRevision: "*"
-      chart: frigate
-      helm:
-        valueFiles:
-          - $values/argocd/apps/frigate/config.yaml
-        valuesObject:
-          nodeSelector:
-            accelerator: coral-tpu
-            nvidia.com/gpu.present: 'true'
-          image:
-            tag: stable
-            pullPolicy: IfNotPresent
-          ingress:
-            enabled: true
-            ingressClassName: nginx
-            hosts:
-              - host: frigate.k8s.yanello.net
-                paths:
-                  - path: "/"
-                    portName: http
-          persistence:
-            media:
-              enabled: true
-              storageClass: local-path
-              accessMode: ReadWriteOnce
-              size: 1Ti
-          envFromSecrets:
-            - frigate-secrets
-    - repoURL: https://github.com/myanello/homelab.git
-      targetRevision: HEAD
-      ref: values
+    # - repoURL: https://blakeblackshear.github.io/blakeshome-charts/
+    #   targetRevision: "*"
+    #   chart: frigate
+    #   helm:
+    #     valueFiles:
+    #       - $values/argocd/apps/frigate/config.yaml
+    #     valuesObject:
+    #       nodeSelector:
+    #         accelerator: coral-tpu
+    #         nvidia.com/gpu.present: 'true'
+    #       image:
+    #         tag: stable
+    #         pullPolicy: IfNotPresent
+    #       ingress:
+    #         enabled: true
+    #         ingressClassName: nginx
+    #         hosts:
+    #           - host: frigate.k8s.yanello.net
+    #             paths:
+    #               - path: "/"
+    #                 portName: http
+    #       persistence:
+    #         media:
+    #           enabled: true
+    #           storageClass: local-path
+    #           accessMode: ReadWriteOnce
+    #           size: 1Ti
+    #       envFromSecrets:
+    #         - frigate-secrets
+    # - repoURL: https://github.com/myanello/homelab.git
+    #   targetRevision: HEAD
+    #   ref: values
     - repoURL: https://github.com/myanello/homelab.git
       targetRevision: HEAD
       path: argocd/apps/frigate/manifests
