--- a/argocd/apps/frigate/manifests/kustomization.yaml
+++ b/argocd/apps/frigate/manifests/kustomization.yaml
@@ -17,4 +17,4 @@ helmCharts:
       version: "*"
       releaseName: frigate
       namespace: frigate
-      valuesFile: ../config.yaml
+      valuesFile: ./config.yaml
