--- a/argocd/apps/frigate/manifests/health-check-patch.yaml
+++ b/argocd/apps/frigate/manifests/health-check-patch.yaml
@@ -11,6 +11,21 @@ spec:
         - name: health-check-script
           mountPath: /usr/local/bin/health-check.py
           subPath: health-check.py
+        livenessProbe: null
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: frigate
+spec:
+  template:
+    spec:
+      containers:
+      - name: frigate
+        volumeMounts:
+        - name: health-check-script
+          mountPath: /usr/local/bin/health-check.py
+          subPath: health-check.py
         livenessProbe:
           exec:
             command:
