--- a/argocd/apps/frigate/manifests/config.yaml
+++ b/argocd/apps/frigate/manifests/config.yaml
@@ -23,6 +23,9 @@ envFromSecrets:
 coral:
   enabled: true
   hostPath: /dev/apex_0
+gpu:
+  nvidia:
+    enabled: true
 config: |
   mqtt:
     host: 192.168.1.4
