--- a/argocd/apps/nvidia-operator/app.yaml
+++ b/argocd/apps/nvidia-operator/app.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   destination:
     name: in-cluster
-    namespace: nvidia-operator
+    namespace: gpu-operator
   syncPolicy:
     automated:
       prune: true
