--- a/argocd/apps/frigate/manifests/config.yaml
+++ b/argocd/apps/frigate/manifests/config.yaml
@@ -26,6 +26,9 @@ coral:
 gpu:
   nvidia:
     enabled: true
+resources:
+  limits:
+    nvidia.com/gpu: 1
 config: |
   mqtt:
     host: 192.168.1.4
