move nvidia op stuff around7

--- a/argocd/apps/nvidia-operator/manifests/cm.yaml
+++ b/argocd/apps/nvidia-operator/manifests/cm.yaml
@@ -9,6 +9,8 @@ data:
       migStrategy: none
     sharing:
       timeSlicing:
+        renameByDefault: true
+        failRequestsGreaterThanOne: false
         resources:
         - name: nvidia.com/gpu
           replicas: 20
