--- a/argocd/apps/nvidia-operator/manifests/cm-patch.yaml
+++ b/argocd/apps/nvidia-operator/manifests/cm-patch.yaml
@@ -2,16 +2,9 @@ apiVersion: nvidia.com/v1
 kind: ClusterPolicy
 metadata:
   name: cluster-policy
+  namespace: gpu-operator
 spec:
   devicePlugin:
     config:
-      name: time-slicing-config
-      flags:
-        migStrategy: none
-      sharing:
-        timeSlicing:
-          renameByDefault: false
-          failRequestsGreaterThanOne: false
-          resources:
-            - name: nvidia.com/gpu
-              replicas: 20
+      name: time-slicing-config-all
+      default: any
